{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 282,
  "lineage": "ced0ecf7-2391-6479-1371-c76409a60d0b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012448707cc6b3e9d",
            "association_id": "eipassoc-0e5af761bbc84c60f",
            "domain": "vpc",
            "id": "eipalloc-012448707cc6b3e9d",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-079676e2e527b5869",
            "private_dns": "ip-10-0-0-253.ap-south-1.compute.internal",
            "private_ip": "10.0.0.253",
            "public_dns": "ec2-13-203-131-90.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.131.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "glps-nat_eip-1"
            },
            "tags_all": {
              "Name": "glps-nat_eip-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:internet-gateway/igw-02c6dcbb388107cb6",
            "id": "igw-02c6dcbb388107cb6",
            "owner_id": "471112932176",
            "tags": {
              "Name": "glps-igw"
            },
            "tags_all": {
              "Name": "glps-igw"
            },
            "vpc_id": "vpc-04d59d4f8a09566ae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:loadbalancer/app/private-lb/94dbb2851cede75a",
            "arn_suffix": "app/private-lb/94dbb2851cede75a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "private-lb-1167278949.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:loadbalancer/app/private-lb/94dbb2851cede75a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c8b5d5a1a694e053"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0096c1deefafbdc8d"
              },
              {
                "subnet_id": "subnet-07830075bc0b5137d"
              }
            ],
            "subnets": [
              "subnet-0096c1deefafbdc8d",
              "subnet-07830075bc0b5137d"
            ],
            "tags": {
              "Name": "glps-private_lb"
            },
            "tags_all": {
              "Name": "glps-private_lb"
            },
            "vpc_id": "vpc-04d59d4f8a09566ae",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.private",
            "aws_security_group.public",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:loadbalancer/app/public-lb/b2e74f2f5f417efd",
            "arn_suffix": "app/public-lb/b2e74f2f5f417efd",
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-lb-1310610904.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:loadbalancer/app/public-lb/b2e74f2f5f417efd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0128dbc38cc03b2f1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04432c557a1e3e5ff"
              },
              {
                "subnet_id": "subnet-0c3c04953cc63cb6e"
              }
            ],
            "subnets": [
              "subnet-04432c557a1e3e5ff",
              "subnet-0c3c04953cc63cb6e"
            ],
            "tags": {
              "Name": "glps-public_lb"
            },
            "tags_all": {
              "Name": "glps-public_lb"
            },
            "vpc_id": "vpc-04d59d4f8a09566ae",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:listener/app/private-lb/94dbb2851cede75a/345e720bb0ea7b77",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:targetgroup/private-tg/5176ed562d2f9307",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:listener/app/private-lb/94dbb2851cede75a/345e720bb0ea7b77",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:loadbalancer/app/private-lb/94dbb2851cede75a",
            "port": 8080,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.private",
            "aws_lb_target_group.private",
            "aws_security_group.private",
            "aws_security_group.public",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:listener/app/public-lb/b2e74f2f5f417efd/cc1e0e857fc057b7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:targetgroup/public-tg/27886225fd0b34c8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:listener/app/public-lb/b2e74f2f5f417efd/cc1e0e857fc057b7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:loadbalancer/app/public-lb/b2e74f2f5f417efd",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.public",
            "aws_lb_target_group.public",
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:targetgroup/private-tg/5176ed562d2f9307",
            "arn_suffix": "targetgroup/private-tg/5176ed562d2f9307",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:targetgroup/private-tg/5176ed562d2f9307",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "private-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04d59d4f8a09566ae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:targetgroup/public-tg/27886225fd0b34c8",
            "arn_suffix": "targetgroup/public-tg/27886225fd0b34c8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:471112932176:targetgroup/public-tg/27886225fd0b34c8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "public-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04d59d4f8a09566ae"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012448707cc6b3e9d",
            "association_id": "eipassoc-0e5af761bbc84c60f",
            "connectivity_type": "public",
            "id": "nat-0d31baba76180ee3e",
            "network_interface_id": "eni-079676e2e527b5869",
            "private_ip": "10.0.0.253",
            "public_ip": "13.203.131.90",
            "subnet_id": "subnet-0c3c04953cc63cb6e",
            "tags": {
              "Name": "glps-nat_gw-1"
            },
            "tags_all": {
              "Name": "glps-nat_gw-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:route-table/rtb-00833f6dbbb9649cc",
            "id": "rtb-00833f6dbbb9649cc",
            "owner_id": "471112932176",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d31baba76180ee3e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "glps-database-rt"
            },
            "tags_all": {
              "Name": "glps-database-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d59d4f8a09566ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:route-table/rtb-005885366a64f6cb8",
            "id": "rtb-005885366a64f6cb8",
            "owner_id": "471112932176",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d31baba76180ee3e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "glps-private-rt"
            },
            "tags_all": {
              "Name": "glps-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d59d4f8a09566ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:route-table/rtb-056f275ba5e57c715",
            "id": "rtb-056f275ba5e57c715",
            "owner_id": "471112932176",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c6dcbb388107cb6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "glps-public-rt"
            },
            "tags_all": {
              "Name": "glps-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d59d4f8a09566ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da9388815481c31b",
            "route_table_id": "rtb-00833f6dbbb9649cc",
            "subnet_id": "subnet-007f3e6a2157e9a81"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.database",
            "aws_subnet.db",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033e149f04d81f677",
            "route_table_id": "rtb-00833f6dbbb9649cc",
            "subnet_id": "subnet-0843178f88bf9e406"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.database",
            "aws_subnet.db",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0353685e9c8735c04",
            "route_table_id": "rtb-005885366a64f6cb8",
            "subnet_id": "subnet-0096c1deefafbdc8d"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0906cfb86a19e1f68",
            "route_table_id": "rtb-005885366a64f6cb8",
            "subnet_id": "subnet-07830075bc0b5137d"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c4fc4210ae63e46",
            "route_table_id": "rtb-056f275ba5e57c715",
            "subnet_id": "subnet-0c3c04953cc63cb6e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016302ee2a9dcec4f",
            "route_table_id": "rtb-056f275ba5e57c715",
            "subnet_id": "subnet-04432c557a1e3e5ff"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:security-group/sg-09eadea75b5aaa0db",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09eadea75b5aaa0db",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8b5d5a1a694e053"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg20250103112315423000000001",
            "name_prefix": "db-sg",
            "owner_id": "471112932176",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "glps-db_sg"
            },
            "tags_all": {
              "Name": "glps-db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d59d4f8a09566ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private",
            "aws_security_group.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:security-group/sg-0c8b5d5a1a694e053",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8b5d5a1a694e053",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0128dbc38cc03b2f1"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0128dbc38cc03b2f1"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "private-sg20250103102750914200000003",
            "name_prefix": "private-sg",
            "owner_id": "471112932176",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "glps-private_sg"
            },
            "tags_all": {
              "Name": "glps-private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d59d4f8a09566ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:security-group/sg-0128dbc38cc03b2f1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0128dbc38cc03b2f1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-sg20250103102748651500000002",
            "name_prefix": "public-sg",
            "owner_id": "471112932176",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "glps-public_sg"
            },
            "tags_all": {
              "Name": "glps-public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d59d4f8a09566ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:subnet/subnet-007f3e6a2157e9a81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007f3e6a2157e9a81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112932176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "glps-db_subnet-1"
            },
            "tags_all": {
              "Name": "glps-db_subnet-1"
            },
            "vpc_id": "vpc-04d59d4f8a09566ae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:subnet/subnet-0843178f88bf9e406",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0843178f88bf9e406",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112932176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "glps-db_subnet-2"
            },
            "tags_all": {
              "Name": "glps-db_subnet-2"
            },
            "vpc_id": "vpc-04d59d4f8a09566ae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:subnet/subnet-0096c1deefafbdc8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0096c1deefafbdc8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112932176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "glps-private_subnet-1"
            },
            "tags_all": {
              "Name": "glps-private_subnet-1"
            },
            "vpc_id": "vpc-04d59d4f8a09566ae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:subnet/subnet-07830075bc0b5137d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07830075bc0b5137d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112932176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "glps-private_subnet-2"
            },
            "tags_all": {
              "Name": "glps-private_subnet-2"
            },
            "vpc_id": "vpc-04d59d4f8a09566ae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:subnet/subnet-0c3c04953cc63cb6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3c04953cc63cb6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112932176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "glps-pub_subnet-1"
            },
            "tags_all": {
              "Name": "glps-pub_subnet-1"
            },
            "vpc_id": "vpc-04d59d4f8a09566ae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:subnet/subnet-04432c557a1e3e5ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04432c557a1e3e5ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "471112932176",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "glps-pub_subnet-2"
            },
            "tags_all": {
              "Name": "glps-pub_subnet-2"
            },
            "vpc_id": "vpc-04d59d4f8a09566ae"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:471112932176:vpc/vpc-04d59d4f8a09566ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d7468e3a2b2e6255",
            "default_route_table_id": "rtb-06c9ac0b04a5dc6e3",
            "default_security_group_id": "sg-0278a9b1baf20ccb8",
            "dhcp_options_id": "dopt-003721dbdea12b4ef",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d59d4f8a09566ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06c9ac0b04a5dc6e3",
            "owner_id": "471112932176",
            "tags": {
              "Name": "glps-vpc"
            },
            "tags_all": {
              "Name": "glps-vpc"
            }
          }
        }
      ]
    }
  ]
}